<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeMeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:overScrollMode="always"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_notice_me" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/select_province"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/select_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_option"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/select_city"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/select_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_option"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/notice_me_restaurant"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/notice_me_person"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/notice_me_phone"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_notice_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="sendNotification"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>