<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/path_data"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/path_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false" />

                <Button
                    android:id="@+id/btn_change_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changePath"
                    android:text="@string/change_path" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/path_map"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/path_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false" />

                <Button
                    android:id="@+id/btn_change_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changePath"
                    android:text="@string/change_path" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/last_update"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="13/10/2014"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableLeft="@android:drawable/ic_popup_sync"
                android:onClick="update"
                android:text="@string/update" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>